# csvalidate

./: .gitignore  README.md  pyproject.toml
csvalidate/: validator.py
rfccsv/: __init__.py  validator.py
tests/: test_validator.py
tests/test_files/: empty_headers.csv  invalid_01.csv  invalid_02.csv  valid_02.csv
