[tool.poetry]
name = "csvalidate"
version = "0.1.0"
description = ""
authors = ["Trygve Falch <trygve.falch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
